fix spacing on multiselect custom placehodler

--- a/projects/epsilon-blueprint/src/styles/ng-select.scss
+++ b/projects/epsilon-blueprint/src/styles/ng-select.scss
@@ -467,6 +467,13 @@
   {
     padding: 0 5px;
   }
+
+  &.ng-value-custom
+  {
+    font-size: $font-size-md;
+    color: $font-color-primary;
+    background: transparent;
+  }
 }
 
 .ng-select.ng-select-multiple.ng-select-disabled .ng-select-container .ng-value-container .ng-value
